--- a/css/style.css
+++ b/css/style.css
@@ -231,7 +231,7 @@ Top area
     -moz-transition: all .4s ease-in-out;
     transition: all .4s ease-in-out;
 	width: 100%;
-	color: #fff;
+	color: rgba(255, 255, 255, 0.701);
 	padding-top: 10px;
 	padding-bottom: 10px;
 }
@@ -1977,7 +1977,7 @@ a.btn:focus{
 	}
 	
 	.navbar.navbar-custom.navbar-fixed-top {
-		background-color: #fff;
+		background-color: rgba(255, 255, 255, 0.742);
 	}
 	
 	.badge.custom-badge {
@@ -1986,7 +1986,7 @@ a.btn:focus{
 	
 	.navbar-header button {
 		border-color: #ccc;
-		background-color: #eee;
+		background-color: rgba(238, 238, 238, 0.716);
 		padding: 5px 20px;
 	}
 	.navbar-header i{
@@ -2003,7 +2003,7 @@ a.btn:focus{
 		padding-bottom:0;
 	}
 	.navbar-custom ul.nav ul.dropdown-menu li {
-		border-bottom: 1px solid #eee;
+		border-bottom: 1px solid rgba(238, 238, 238, 0.656);
 		padding-left: 20px;
 	}
 	
